noVNC SCREEN_DEPTH to 16, disable auto_record

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -138,7 +138,7 @@ ENV DISPLAY=:0 \
     SCREEN=0 \
     SCREEN_WIDTH=1600 \
     SCREEN_HEIGHT=900 \
-    SCREEN_DEPTH=24+32 \
+    SCREEN_DEPTH=16 \
     LOCAL_PORT=5900 \
     TARGET_PORT=6080 \
     TIMEOUT=1 \
